[tool.poetry]
name = "chaos_hm"
version = "0.1.0"
description = ""
authors = ["igor igorek <segrovets@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
black = "^23.9.0"
pandas = "^2.1.0"
xarray = ">=2022.3.0,<2023.0.0"
tqdm = "^4.66.1"
scipy = ">=1.9.0"
argparse = "^1.4.0"
scikit-learn = "^1.3.0"
fastdtw = "^0.3.4"
notebook = "^7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"